add: answer for /start
need work for chat answer

--- a/.env.dev
+++ b/.env.dev
@@ -2,3 +2,7 @@ DEBUG=True
 DJANGO_ALLOWED_HOSTS=["*",]
 
 WEB_DOMAIN=http://localhost:8000
+
+TELEGRAM_TOKEN=5363836025:AAG0Nwxo5hVQVLLV-a3ZcpuczrUwSNIVw-4
+
+ENABLE_DECORATOR_LOGGING=True
